@@ -20,8 +20,10 @@ import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionException;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 
-import com.mira.Flags;
+import com.mira.cli.Flags;
 import com.mira.error.MiraError;
 import com.mira.error.runtime.RuntimeError;
 import com.mira.error.runtime.RuntimeError.LibImportConflictError;
@@ -52,6 +54,14 @@ public class ImportResolver {
     }
 
     private static final Internal internal = new Internal();
+    // Dedicated per-task virtual-thread executor for resolving aliased module imports.
+    // Nested aliased imports recursively submit further blocking (.join()) tasks here;
+    // using ForkJoinPool.commonPool() (bounded to availableProcessors()-1) for that
+    // starves out under enough recursive fan-out (every pool thread ends up blocked
+    // waiting on a child task with no free thread left to run it) - a real deadlock
+    // observed on projects with deep, widely shared aliased-import graphs. Virtual
+    // threads are cheap and unbounded, so blocking here never exhausts a shared pool.
+    private static final ExecutorService MODULE_EXECUTOR = Executors.newVirtualThreadPerTaskExecutor();
     private static final Map<String, CachedModule> astCache = new ConcurrentHashMap<>();
     private static final ConcurrentHashMap<String, CompletableFuture<Void>> moduleLoadFutures = new ConcurrentHashMap<>();
     private static final Set<String> loadedLibs = new HashSet<>();
@@ -128,7 +138,7 @@ public class ImportResolver {
                     .map(e -> CompletableFuture.runAsync(() -> {
                 Flags.inputPath.set(parentInputPath);
                 resolveModuleImport(new Interpreter(), e, environment);
-            }))
+            }, MODULE_EXECUTOR))
                     .toList();
             try {
                 CompletableFuture.allOf(futures.toArray(CompletableFuture[]::new)).join();
@@ -176,8 +186,7 @@ public class ImportResolver {
         }
     }
 
-    private static void resolveModuleImport(Interpreter interpreter, ImportExpression importExpression, Environment environment) {
-        String rawPath = importExpression.getModule().replace("\"", "");
+    public static Path resolveModulePath(String rawPath) {
         if (!rawPath.endsWith(".mira")) {
             rawPath += ".mira";
         }
@@ -197,7 +206,22 @@ public class ImportResolver {
                 }
             }
         }
+        return modulePath;
+    }
 
+    private static Path findInNativeRoots(String basename) {
+        for (Path root : Flags.nativeRoots) {
+            Path candidate = root.resolve(basename);
+            if (Files.exists(candidate)) {
+                return candidate;
+            }
+        }
+        return null;
+    }
+
+    private static void resolveModuleImport(Interpreter interpreter, ImportExpression importExpression, Environment environment) {
+        String rawPath = importExpression.getModule().replace("\"", "");
+        Path modulePath = resolveModulePath(rawPath);
         String moduleKey = modulePath.toAbsolutePath().toString();
 
         CompletableFuture<Void> loadFuture = new CompletableFuture<>();
@@ -226,9 +250,10 @@ public class ImportResolver {
             return;
         }
 
+        Path previousFile = Flags.inputPath.get();
         try {
             if (!Files.exists(modulePath)) {
-                throw new RuntimeException("Module file not found: " + modulePath);
+                throw new RuntimeError.ModuleNotFoundError(modulePath.toString());
             }
 
             FileTime currentModTime = Files.getLastModifiedTime(modulePath);
@@ -243,10 +268,9 @@ public class ImportResolver {
                 astCache.put(moduleKey, new CachedModule(asts, currentModTime));
             }
 
-            Path previousFile = Flags.inputPath.get();
             Flags.inputPath.set(modulePath);
 
-            validateModuleDeclaration(asts, importExpression);
+            String moduleName = validateModuleDeclaration(asts, importExpression.getModule());
 
             String alias = importExpression.getNamespace();
             boolean hasAlias = alias != null && !alias.isBlank();
@@ -268,8 +292,10 @@ public class ImportResolver {
 
             for (Node ast : moduleBody) {
                 switch (ast) {
-                    case FuncDecl fd ->
+                    case FuncDecl fd -> {
+                        interpreter.registerFunctionModule(fd.getName(), moduleName);
                         interpreter.loadASTIntoContext(fd, modulePrivateEnv);
+                    }
                     case EnumDecl ed ->
                         interpreter.loadASTIntoContext(ed, modulePrivateEnv);
                     case VarDecl vd when vd.isConst() ->
@@ -322,7 +348,6 @@ public class ImportResolver {
                 modulePrivateEnv.copyDeclarationsTo(environment, importedSymbols);
             }
 
-            Flags.inputPath.set(previousFile);
             loadFuture.complete(null);
 
         } catch (MiraError e) {
@@ -335,12 +360,111 @@ public class ImportResolver {
                 throw re;
             }
             throw new RuntimeException("Module '" + importExpression.getModule() + "' could not be loaded", e);
+        } finally {
+            Flags.inputPath.set(previousFile);
         }
     }
 
-    private static String validateModuleDeclaration(List<Node> asts, ImportExpression expr) {
+    /**
+     * Loads a module by a runtime-computed path, outside of the static
+     * {@code import} statement's parallel-resolution/de-dup machinery (that
+     * machinery is specific to batching aliased imports of the same entry-point
+     * program; dynamic imports happen at arbitrary points during execution and
+     * always need a fresh, independent {@link Namespace} returned to the
+     * caller, so it re-derives one from the shared {@link #astCache} instead of
+     * participating in {@link #moduleLoadFutures}).
+     */
+    public static Namespace resolveDynamicImport(Interpreter interpreter, String rawPath, List<String> selectedSymbolsOrNull) {
+        Path modulePath = resolveModulePath(rawPath);
+        Path previousFile = Flags.inputPath.get();
+        try {
+            if (!Files.exists(modulePath)) {
+                throw new RuntimeError.ModuleNotFoundError(modulePath.toString());
+            }
+
+            String moduleKey = modulePath.toAbsolutePath().toString();
+            FileTime currentModTime = Files.getLastModifiedTime(modulePath);
+            CachedModule cached = astCache.get(moduleKey);
+            List<Node> asts;
+            if (cached != null && cached.lastModified().equals(currentModTime)) {
+                asts = cached.ast();
+            } else {
+                String source = Files.readString(modulePath);
+                List<Token> tokens = new Tokenizer().tokenize(source, false);
+                asts = new Parser().parseTokens(tokens);
+                astCache.put(moduleKey, new CachedModule(asts, currentModTime));
+            }
+
+            Flags.inputPath.set(modulePath);
+            String moduleName = validateModuleDeclaration(asts, rawPath);
+
+            List<ImportExpression> nestedImports = new ArrayList<>();
+            List<Node> moduleBody = new ArrayList<>();
+            for (Node ast : asts) {
+                if (ast instanceof ImportExpression expr) {
+                    nestedImports.add(expr);
+                } else if (!(ast instanceof ModuleDecl)) {
+                    moduleBody.add(ast);
+                }
+            }
+
+            Namespace modulePrivateEnv = new Namespace("__mod__");
+            internal.loadLib(modulePrivateEnv);
+            resolveImports(nestedImports, modulePrivateEnv, interpreter, false);
+            Set<String> importedSymbols = new HashSet<>(modulePrivateEnv.keySet());
+
+            for (Node ast : moduleBody) {
+                switch (ast) {
+                    case FuncDecl fd -> {
+                        interpreter.registerFunctionModule(fd.getName(), moduleName);
+                        interpreter.loadASTIntoContext(fd, modulePrivateEnv);
+                    }
+                    case EnumDecl ed ->
+                        interpreter.loadASTIntoContext(ed, modulePrivateEnv);
+                    case VarDecl vd when vd.isConst() ->
+                        interpreter.loadASTIntoContext(vd, modulePrivateEnv);
+                    default -> {
+                    }
+                }
+            }
+
+            for (Node ast : moduleBody) {
+                if (ast instanceof FuncDecl || ast instanceof EnumDecl
+                        || (ast instanceof VarDecl vd && vd.isConst())) {
+                    continue;
+                }
+                interpreter.loadASTIntoContext(ast, modulePrivateEnv);
+            }
+
+            Namespace result = new Namespace(moduleName);
+            if (selectedSymbolsOrNull != null) {
+                for (String name : selectedSymbolsOrNull) {
+                    if (!modulePrivateEnv.exists(name)) {
+                        throw new ModuleSymbolNotFoundError(name, rawPath);
+                    }
+                    if (!modulePrivateEnv.isPublicDeclaration(name)) {
+                        throw new PrivateSymbolImportError(name, rawPath);
+                    }
+                    result.define(name, modulePrivateEnv.get(name));
+                }
+            } else {
+                modulePrivateEnv.copyDeclarationsTo(result, importedSymbols);
+            }
+            return result;
+
+        } catch (MiraError e) {
+            e.addImportChain(modulePath.getFileName().toString());
+            throw e;
+        } catch (IOException e) {
+            throw new RuntimeException("Module '" + rawPath + "' could not be loaded", e);
+        } finally {
+            Flags.inputPath.set(previousFile);
+        }
+    }
+
+    private static String validateModuleDeclaration(List<Node> asts, String moduleLabel) {
         if (!(asts.getFirst() instanceof ModuleDecl moduleDecl)) {
-            throw new RuntimeError.ModuleMissingDeclarationError(expr.getModule());
+            throw new RuntimeError.ModuleMissingDeclarationError(moduleLabel);
         }
         return moduleDecl.getModuleName();
     }
@@ -453,13 +577,18 @@ public class ImportResolver {
                 Files.copy(bundled, tempJar, StandardCopyOption.REPLACE_EXISTING);
                 jarPath = tempJar;
             } else {
-                Path currentFile = ipRef != null ? ipRef.toAbsolutePath() : Path.of("").toAbsolutePath();
-                Path candidate = Paths.get(rawPath);
-                jarPath = candidate.isAbsolute()
-                        ? candidate.normalize()
-                        : currentFile.getParent().resolve(candidate).normalize();
-                if (!Files.exists(jarPath)) {
-                    throw new NativeLibNotFoundError(jarPath.toString()).withSourceFile(importingFile);
+                Path fromNativeRoots = findInNativeRoots(basename);
+                if (fromNativeRoots != null) {
+                    jarPath = fromNativeRoots;
+                } else {
+                    Path currentFile = ipRef != null ? ipRef.toAbsolutePath() : Path.of("").toAbsolutePath();
+                    Path candidate = Paths.get(rawPath);
+                    jarPath = candidate.isAbsolute()
+                            ? candidate.normalize()
+                            : currentFile.getParent().resolve(candidate).normalize();
+                    if (!Files.exists(jarPath)) {
+                        throw new NativeLibNotFoundError(jarPath.toString()).withSourceFile(importingFile);
+                    }
                 }
             }
         } catch (NativeLibNotFoundError e) {
